--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "cypress run",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -22,10 +24,13 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.0.0",
+    "cypress": "^12.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
